added extra card and changed flex

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
           <p>Javascript</p>
           <i class="fab fa-js-square"></i>
         </div>
+        <div class="card">
+          <p>Git</p>
+          <i class="fas fa-code-branch"></i>
+        </div>
       </div>
     </div>
 
