made responsive for bigger screens. few changes to buttons on hover.

--- a/index.html
+++ b/index.html
@@ -147,16 +147,24 @@
       <h2>Email: <span class="email">Joey.phillipson1@hotmail.com</span></h2>
     </div>
 
-    <div class="social-section">
-      <div class="social-links github">
-        <a href="https://github.com/Joey690152" target="_blank"><i class="fab fa-github"></i></a>
-      </div>
-      <div class="social-links linkedin">
-        <a href="https://www.linkedin.com/in/joseph-phillipson-8225871b6/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-      <div class="social-links instagram">
-        <a href="https://www.instagram.com/web_dev_joey/" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
+    <div class="social-links">
+      <ul>
+        <li>
+          <a href="https://github.com/Joey690152" target="_blank">
+            <i class="fab fa-github icon github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/joseph-phillipson-8225871b6/" target="_blank">
+            <i class="fab fa-linkedin-in icon linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/web_dev_joey/" target="_blank">
+            <i class="fab fa-instagram icon instagram"></i>
+          </a>
+        </li>
+      </ul>
     </div>
   </section>
 
